--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -2,27 +2,26 @@
     <div class="form-group row">
       <label for="Food Name" class="col-md-2 col-form-label">Food</label>
       <div class="col-md-10">
-        <input type="text" class="form-control" id="inputEmail3" placeholder="name of the food">
+        <input type="text" class="form-control" placeholder="name of the food you just ate">
       </div>
     </div>
    
      <div class="form-group row">
       <label for="Calories" class="col-md-2 col-form-label">Calories</label>
       <div class="col-md-10">
-        <input type="text" class="form-control" id="inputEmail3" placeholder="enter food calories">
+        <input type="text" class="form-control" placeholder="enter food calories">
       </div>
     </div>
-      <div class="form-group row">
+      <div class=" row">
       <label for="details" class="col-md-2 col-form-label">Details</label>
       <div class="col-md-10">
-        <input type="text" class="form-control" id="" placeholder="details">
+        <input type="text" class="form-control"  placeholder="details">
       </div>
     </div>
       <div class="form-group row">
      
-      <div class="col-md-6 col-offset-3" style="align-content: center;">
-        	<button type="submit" class="btn btn-primary">Submit</button>
-        
-      </div>
+      <div class="col-md-6 col-offset-3" style="align-content: center; margin-top: 20PX; margin-left: 160px;">
+        	<button type="submit" class="btn btn-success">Submit</button>
+        <button type="submit" class="btn btn-primary">clear</button>      </div>
     </div>
   </form>
