form to allow user input added

--- a/src/app/result-pane/result-pane.component.html
+++ b/src/app/result-pane/result-pane.component.html
@@ -1,3 +1,9 @@
 <h2 style="color: orange;">
 	The List of Meals
 </h2>
+<ul>
+	<li>Food: {{foodName}}</li>
+	<li>Calories: {{calories}}</li>
+	<li>Details: {{details}}</li>
+</ul>
+	<button (click)="onClick()">Add</button>
