--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -15,7 +15,7 @@
       <div class=" row">
       <label for="details" class="col-md-2 col-form-label">Details</label>
       <div class="col-md-10">
-        <input type="text" class="form-control"  placeholder="details">
+        <input type="text" class="form-control"  placeholder="food details">
       </div>
     </div>
       <div class="form-group row">
