--- a/src/app/result-pane/result-pane.component.html
+++ b/src/app/result-pane/result-pane.component.html
@@ -6,4 +6,25 @@
 	<li>Calories: {{calories}}</li>
 	<li>Details: {{details}}</li>
 </ul>
-	<button (click)="onClick()">Add</button>
+
+	<div edit>
+		<p (click)="onClick()"> Click here to  Add </p>
+	</div>
+
+<h3> Edit Meal</h3>
+<form>
+
+	<div>
+		<label for="name">Name: </label><br>
+		<input type="text" [(ngModel)]="foodName" name="name">
+	</div>
+	<div>
+		<label for="calories">Calories: </label><br>
+		<input type="number" [(ngModel)]="calories" name="calories">
+	</div>
+	<div>
+		<label for="details">Details: </label><br>
+		<input type="text" [(ngModel)]="details" name="details">
+	</div>
+
+</form>
