adding the new meals to a master list

--- a/src/app/add-food/add-food.component.html
+++ b/src/app/add-food/add-food.component.html
@@ -19,9 +19,6 @@
 	</div>
 </div>
 	<button class="btn btn-primary" style="margin-top:50px" (click)="addFood( addFoodName.value, newDescription.value, newCalorie.value);
-	 addFoodName.value=''; newDescription.value=''; newCalorie.value=''">ADD</button>
+	 addFoodName.value=''; newDescription.value=''; newCalorie.value='';">ADD</button>
 	 
-	 <div *ngFor="let myFood of newFoodObj">
-	 	name: {{myFood.name}}
-	 </div>
 
