--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -1,5 +1,10 @@
-  <form>
-    <app-add-food>
+ <!--    <app-add-food>
       (addNewFood)="showFood($event)"
-    </app-add-food>
-  </form>
+    </app-add-food> -->
+
+<!--    <app-result-pane>
+     (addNewFood)="showFood($event)"
+   	
+   </app-result-pane> -->
+
+ 
