--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,13 +9,22 @@
     <div class="row">
 
         <div class="col-lg-6 col-md-6 ">
-          <app-form></app-form>
+       <app-add-food
+        (addNewFood)="showFood($event)"
+       >
+        
+      </app-add-food>
         </div>
           <!-- form to input meal details -->
 
 
         <div class=" well col-lg-6 col-md-6">
-          <app-result-pane></app-result-pane>
+          
+          <app-result-pane
+            [childFoodlist]="masterFoodsList"
+          >
+            
+          </app-result-pane>
         </div>
           <!-- result panel -->
     </div>
