--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,20 +11,23 @@
         <div class="col-lg-6 col-md-6 ">
        <app-add-food
         (addNewFood)="showFood($event)"
-       >
-        
-      </app-add-food>
+       ></app-add-food>
         </div>
           <!-- form to input meal details -->
 
 
         <div class=" well col-lg-6 col-md-6">
-          
+
           <app-result-pane
             [childFoodlist]="masterFoodsList"
-          >
-            
-          </app-result-pane>
+            (clickSender)= "showFoodDetailToEdit($event)"
+          ></app-result-pane>
+
+          <app-edit-food
+          [foodToEdit]="selectedFood"
+          (doneClickedSender)="finishedEditing"
+          ></app-edit-food>
+
         </div>
           <!-- result panel -->
     </div>
@@ -35,4 +38,3 @@
 
   </div>
 </div>
-
