fixed th description update input

--- a/src/app/edit-food/edit-food.component.html
+++ b/src/app/edit-food/edit-food.component.html
@@ -8,11 +8,11 @@
   </div>
   <div>
     <label>Enter Food Details:</label>
-    <input [(ngModel)]="foodToEdit.details">
+    <input [(ngModel)]="foodToEdit.description">
   </div>
   <div>
     <label>Enter Calorie Count:</label>
     <input [(ngModel)]="foodToEdit.calories"><br>
     <button class="btn btn-success" (click)="doneClicked()" >Save</button>
-    
+
   </div>
