the failed edit button

--- a/src/app/add-food/add-food.component.html
+++ b/src/app/add-food/add-food.component.html
@@ -17,7 +17,7 @@
 	<div class="form-group row">
 		<label>Calories</label><br>
 		<div>
-			<input placeholder="200" style="width:90%; height:40px" #newCalorie><br>
+			<input placeholder="200" style="width:90%; height:40px" #newCalorie>
 		</div>
 	</div>
 		<button class="btn btn-primary" style="margin-top:50px" (click)="addFood( addFoodName.value, newDescription.value, newCalorie.value);
@@ -26,6 +26,6 @@
 		 newCalorie.value='';
 		">ADD
 		</button>
-		
+
 
 </form>
