--- a/src/app/edit-food/edit-food.component.html
+++ b/src/app/edit-food/edit-food.component.html
@@ -13,6 +13,6 @@
   <div>
     <label>Enter Calorie Count:</label>
     <input [(ngModel)]="foodToEdit.calories"><br>
-    <button class="btn btn-success" (click)="doneClicked()" >Save</button>
+    <button class="btn btn-success" (click)="doneClicked()" >Update</button>
 
   </div>
