removed aruments for the edit submition button to activate the null

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,7 +25,7 @@
 
           <app-edit-food
           [foodToEdit]="selectedFood"
-          (doneClickedSender)="finishedEditing($event)"
+          (doneClickedSender)="finishedEditing()"
           ></app-edit-food>
 
         </div>
