--- a/src/app/result-pane/result-pane.component.html
+++ b/src/app/result-pane/result-pane.component.html
@@ -14,7 +14,7 @@
 				Description:  <span> {{foodList.description}} </span>
 				Calories:  <span> {{foodList.calories}} </span>
 				<button class=" btn btn-primary"(click)="editFoodButton(foodList)">Edit</button>
-				<button class="btn btn-danger" (click)="removeFood()" >Delete</button>
+				<button class="btn btn-danger" (click)="deleteFoodButton(foodList)" >Delete</button>
 			</li>
 		</ul>
 	</div>
